--- a/fron2/templates/acquaintance/acquaintanceList.html
+++ b/fron2/templates/acquaintance/acquaintanceList.html
@@ -6,92 +6,74 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--jQuery-->
-        <script src="/library/jquery-2.1.4.js"></script>
+        <script src="../../static/library/jquery-2.1.4.js"></script>
 
         <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../bootStrap/bootstrap.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
 
-        <!--custom-->
-        <link rel="stylesheet" href="../../style.css">
+        <!--common -->
+        <link rel="stylesheet" href="../../static/common.css">
+
+        <!--specific-->
+        <link rel="stylesheet" href="../../static/css/acquaintanceList.css">
 
         <title>acquaintanceList</title>
     </head>
-    <body class="acquaintanceList">
-        <div class="container">
-            <div class="row text-center text-primary">
-                <h3>나의 지인 리스트</h3>
-            </div>
-            <div class="row text-center">
-                <ul>
-                    <li>
-                        <span><img class="demo-img" alt="프로필 사진"></span>
-                        <span class="user-info">
-                            <div class="wrapper">
-                                <div class="nickName">닉네임</div>
-                                <div id ="reliabilitySystem-i1" class="reliabilitySystem">
-                                    <input class="input-reliability-size" type="hidden" value="-1">
-                                    <div class="reliabilityText">신뢰도</div>
-                                    <div class="gaugeBar">
-                                        <div class="back"></div>
-                                        <div class="front"></div>
+    <body>
+        <form id="form-i1" action="#none">
+            <div class="container">
+                <div class="row text-center text-primary">
+                    <h3>나의 지인 리스트</h3>
+                </div>
+                <div class="row text-center">
+                    <ul>
+                        <li>
+                            <span><img class="demo-img" alt="프로필 사진"></span>
+                            <span class="user-info">
+                                <div class="wrapper">
+                                    <div class="nickName">닉네임</div>
+                                    <div class="reliabilitySystem">
+                                        <input class="input-reliability-size" type="hidden" value="-1">
+                                        <div class="reliabilityText">신뢰도</div>
+                                        <div class="gaugeBar">
+                                            <div class="back"></div>
+                                            <div class="front"></div>
+                                        </div>
                                     </div>
                                 </div>
-                            </div>
-                        </span>
-                        <span class="btn-frame">
-                            <button class="btn btn-info type="button">지인 삭제</button>
-                        </span>
-                        <span class="btn-frame">
-                            <button class="btn btn-info type="button">맛집 보기</button>
-                        </span>
-                    </li>
-                    <li>
-                        <span><img class="demo-img" alt="프로필 사진"></span>
-                        <span class="user-info">
-                            <div class="wrapper">
-                                <div class="nickName">닉네임</div>
-                                <div class="reliability">신로도 *****</div>
-                            </div>
-                        </span>
-                        <span class="btn-frame">
-                            <button class="btn btn-info type="button">지인 삭제</button>
-                        </span>
-                        <span class="btn-frame">
-                            <button class="btn btn-info type="button">맛집 보기</button>
-                        </span>
-                    </li>
-                    <li>
-                        <span><img class="demo-img" alt="프로필 사진"></span>
-                        <span class="user-info">
-                            <div class="wrapper">
-                                <div class="nickName">닉네임</div>
-                                <div class="reliability">신로도 *****</div>
-                            </div>
-                        </span>
-                        <span class="btn-frame">
-                            <button class="btn btn-info type="button">지인 삭제</button>
-                        </span>
-                        <span class="btn-frame">
-                            <button class="btn btn-info type="button">맛집 보기</button>
-                        </span>
-                    </li>
-                </ul>
-            </div>
-            <div class="row">
-                <div class="col-md-1"></div>
-                    <div class="col-xs-8 col-md-2">
+                            </span>
+                            <span class="btn-frame">
+                                <button class="btn btn-info" type="button">맛집 보기</button>
+                            </span>
+                            <span class="input-wrapper">
+                                <input class="input-delete" type="checkbox">
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="row">
+                    <div class="btns">
                         <button class="btn btn-primary" type="button">이전으로</button>
+                        <button class="btn btn-primary btn-acquaintance-delete" type="button">지인삭제</button>
+                        <div class="message-component-wrapeer">
+                            <div class="new-message-pop">10</div>
+                            <button class="btn btn-primary btn-message-box">
+                                메세지함
+                            </button>
+                        </div>
+                        <button class="btn btn-primary">친분맺기</button>
                     </div>
+                </div>
             </div>
-        </div>
+        </form>
     </div>
     <!--부트 스트랩-->
-    <script src="../../bootStrap/bootstrap.min.js"></script>
+    <script src="../../static/bootStrap/bootstrap.min.js"></script>
     <!--common.js-->
-    <script src="../../common.js"></script>
+    <script src="../../static/common.js"></script>
     <!--specific.js-->
-    <script src="../../js/acquaintanceList.js"></script>
+    <script src="../../static/js/acquaintanceList.js"></script>
 
 </body>
 </html>
