--- a/fron2/static/css/spot.css
+++ b/fron2/static/css/spot.css
@@ -1,63 +1,193 @@
 /* ############################### Spot ################################ */
-#main-spot-img {
-  width: 250px;
-}
-.spot-images img{
-  width: 120px;
-  margin: 10px;
-}
-.img-frame{
-  display: inline-block;
-  height: 300px;
-  /* border: 1px solid blue; */
+
+.text-head {
+  text-align: center;
+  margin: 30px 0;
 }
 
-.comment-area {
-  /* border: 1px solid red; */
+#main-spot-img {
+  display: block;
+  width: 300px;
+  margin: auto;
+}
+
+.spot-info-warapper>div{
+  padding: 5px 20px;
+  font-size: 16px;
+}
+
+.spot-image-area img{
+  width: 150px;
+  margin: 10px;
+}
+
+/*######### layout-comment-area #########*/
+.layout-comment-area {
+  padding-top: 20px;
+}
+
+.comment {
+  border-radius: 5px;
+  width: 342px;
+  margin: auto;
+  overflow: hidden;
+}
+.comment-middle {
+  overflow: hidden;
+}
+.comment-middle .img-frame {
+  padding-top: 5px;
+  text-align: center;
+  width: 60px;
+  float: left
+}
+.comment-middle .text-frame {
+  width: 270px;
+  padding: 5px;
+  float:left;
+}
+.comment-bottom {
+  overflow: hidden;
+  background-color: rgb(192, 211, 255);
+}
+.comment-bottom .nickname-frame {
+  float:left;
+  padding-left: 10px;
+  padding-top: 6px;
+  width: 180px;
+  font-size: 16px;
+}
+.comment-bottom .starpoint-frame {
+  float:left;
+  width: 150px;
+  padding-top: 5px;
+  padding-left: 30px;
+}
+
+.btn-leave-comment{
+  margin-top: 10px;
+  margin-left: 240px;
+  font-size: 16px;
+  border-radius: 3px;
+  height: 35px;
+  border-radius: 5px;
+}
+
+
+.comment-form-wrapper summary {
+  background: rgb(82, 114, 211);
+  display: none;
+}
+
+textarea {
+  outline: none;
+  resize: none;
+  border-radius: 3px;
+  margin-top: 3px;
+}
+
+.btn-leave-comment2
+{
+  margin-top: 3px;
+  font-size: 16px;
+  width: 100px;
+  height: 25px;
+  border-radius: 3px;
+}
+
+textarea:focus {
+  border: 1px solid rgb(140, 140, 255);
+  box-shadow: 0 0 3px rgb(140, 140, 255);
+}
+
+/*#########comment pager############*/
+.pager-container{
+  width: 343px;
+  margin: auto;
+  overflow: hidden;
+  font-size: 20px;
+  text-align: center;
+  margin-top: 10px;
+}
+
+.pager-container > div{
+  float: left;
+}
+
+.pager-arrow{
+  margin-top: 3px;
+  width: 40px;
+  color: rgb(119, 171, 223);
+}
+
+.pager-arrow a{
+  color: rgb(99, 136, 201);
+  border: 1px solid rgba(108, 173, 220, 0);
+  border-radius: 3px;
+  display: inline-block;
+  width: 30px;
+}
+
+.pager-arrow:hover a{
+  color: rgb(71, 107, 169);
+  border: 1px solid rgb(108, 173, 220);
+  cursor: pointer;
+}
+
+.page-num{
+  display: inline-block;
+  border: 1px solid rgba(255, 255, 255, 0);
+  box-sizing: border-box;
+  vertical-align: top;
+  color: gray;
+  padding: 2px;
+  height: 32px;
+  width: 35px;
+}
+
+.page-num:hover{
+  color: rgb(84, 126, 197);
+  border: 1px solid rgb(108, 173, 220);
+  border-radius: 3px;
+  cursor: pointer;
+  /* margin-top: -1px; */
+}
+
+.current-page-num{
+  color: rgb(84, 126, 197);
+  font-weight: bold;
+}
+
+.pager-navigator{
+  width: 60px;
+  color: gray;
+  word-break: break-all;
+  margin-top: 2px;
+}
+
+
+
+/*######### layout-visitor-info ##########*/
+
+.visitor-info-wrapper{
+  text-align: center;
+  font-size: 16px;
+  margin: 50px 0;
+}
+
+
+.visitor-info-wrapper div{
   margin: 20px 0;
 }
 
-.visitor-info-area{
-  height : 250px;
-  position: relative;
-}
-#visitor-profile-img{
-  width: 200px;
+.visitor-profile-img{
+  width: 150px;
   border-radius: 50%;
-  position: absolute;
-  top: 10px;
-  left:30px;
-}
-#visitor-nickName {
-  position: absolute;
-  top: 220px;
-  left: 80px;
-}
-.visitor-info{
-  display: inline-block;
-  width: 280px;
-  padding-top:20px;
-  position: absolute;
-  top:10px;
-  left: 240px; 
-}
-.home-list {
-  padding: 10px;
-  /* border: 1px solid red; */
-}
-.home-list div{
-  display: inline-block;
-  margin-right: 10px;
-}
-
-.home-list button{
-  font-size: 12px;
-  padding: 5px;
-  width: 120px;
-  height: 30px;
 }
 
 .footer button{
-  margin-bottom: 10px;
+  font-size: 20px;
+  margin-bottom: 15px;
+  height: 40px;
   width: 120px;
 } 
