--- a/fron2/templates/spot/spot.html
+++ b/fron2/templates/spot/spot.html
@@ -188,6 +188,16 @@
                             <img class="visitor-profile-img demo-img">
                         </div>
                         <div class="visitor-nickName">탐방한 사람 이름</div>
+                        <div>
+                            <div class="reliabilitySystem">
+                                <input class="input-reliability-size" type="hidden" value="-1">
+                                <div class="reliabilityText">신뢰도</div>
+                                <div class="gaugeBar">
+                                    <div class="back"></div>
+                                    <div class="front"></div>
+                                </div>
+                            </div>
+                        </div>
                         <div class="visitor-introduction-frame">
                             <div>
                                 탐방한 사람 소개 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Rem
