--- a/fron2/templates/login/loginHome.html
+++ b/fron2/templates/login/loginHome.html
@@ -29,13 +29,14 @@
 
         <!--css-->
         <link rel="stylesheet" href="../../static/common.css" th:href="../../style.css">
+        <link rel="stylesheet" href="../../static/css/loginHome.css">
 
         <title>Document</title>
     </head>
     <body class="loginHome">
         <div class="container text-center">
             <div class="row">
-                <h1 style="color: gray;">로그인 홈</h1>
+                <h1 class="text-primary">로그인 홈</h1>
             </div>
             <div class="row">
                 <h3 style="margin-bottom: 20px; color: gray;">최근에 업데이트 된 우리들의 맛집정보!</h3>
