--- a/fron2/templates/spot/spotRegisteration.html
+++ b/fron2/templates/spot/spotRegisteration.html
@@ -6,19 +6,24 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../bootStrap/bootstrap.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
 
         <!--fontawesome-->
         <link rel="stylesheet" href="../../library/fontawesome/all.min.css">
 
         <!--css-->
-        <link rel="stylesheet" href="../../style.css">
+        <link rel="stylesheet" href="../../static/css/spotRegisteration.css">
+        <link rel="stylesheet" href="../../static/common.css">
 
         <title>spotRegisteration</title>
     </head>
     <body class="spotRegisteration">
-        <form action="#none" th:action method="post" enctype="multipart/form-data">
+        <form
+            action="#none"
+            th:action="th:action"
+            method="post"
+            enctype="multipart/form-data">
             <div class="container">
                 <div class="row">
                     <div class="col-xs-2"></div>
@@ -39,44 +44,43 @@
                         <div>
                             <div class="img-button-frame">
                                 <input
-                                	th:name="spotMainImg"
+                                    th:name="spotMainImg"
                                     id="input-main-img"
                                     type="file"
                                     accept=".jpg, .txt"
                                     name="main-img">
-                                    <div class="text-danger" th:errors="${spotRegisterationForm.spotMainImg}">메인 사진 오류 메시지</div>
+                                <div class="text-danger" th:errors="${spotRegisterationForm.spotMainImg}">메인 사진 오류 메시지</div>
                                 <button id="btn-main-img" class="btn btn-primary" type="button">메인 사진 등록</button>
                             </div>
                             <div class="img-button-frame">
                                 <input
-                                	th:name="spotAddedImgs"
+                                    th:name="spotAddedImgs"
                                     id="input-added-imgs"
                                     type="file"
                                     accept=".jpg, .txt"
                                     multiple="multiple"
                                     name="added-img">
-                                    <div class="text-danger" th:errors="${spotRegisterationForm.spotAddedImgs}">추가 사진 오류 메시지</div>
+                                <div class="text-danger" th:errors="${spotRegisterationForm.spotAddedImgs}">추가 사진 오류 메시지</div>
                                 <button id="btn-added-imgs" class="btn btn-primary" type="button">추가 사진 등록</button>
                             </div>
                         </div>
                     </div>
                     <div class="col-md-4">
                         <div class="spot-info-area">
-                            <div>
-                            <div class="text-danger" th:errors="${spotRegisterationForm.spotName}">맛집 이름 오류</div>
+                            <div class="spot-name-frame">
+                                <div class="text-danger" th:errors="${spotRegisterationForm.spotName}">맛집 이름 오류</div>
                                 <input
-                                	th:value="${spotRegisterationForm.spotName}"
-                                	th:name="spotName"
+                                    th:value="${spotRegisterationForm.spotName}"
+                                    th:name="spotName"
                                     type="text"
                                     name="spot-name"
-                                    placeholder="맛집 이름을 써주세요."
-                                    >
+                                    placeholder="맛집 이름을 써주세요.">
                             </div>
-                            <div>
-                            <div class="text-danger" th:errors="${spotRegisterationForm.spotIntroduction}">맛집 소개 오류</div>
+                            <div class="spot-introduction-frame">
+                                <div class="text-danger" th:errors="${spotRegisterationForm.spotIntroduction}">맛집 소개 오류</div>
                                 <textarea
-                                	th:name="spotIntroduction"
-                                	th:text="${spotRegisterationForm.spotIntroduction}"
+                                    th:name="spotIntroduction"
+                                    th:text="${spotRegisterationForm.spotIntroduction}"
                                     name="spot-introduction"
                                     cols="45"
                                     rows="10"
@@ -84,10 +88,10 @@
                                     maxlength="400"
                                     style="resize: none;"></textarea>
                             </div>
-                            <div class="text-danger" th:errors="${spotRegisterationForm.starPoint}">별점 시스템 오류</div>
                             <div id="startPointSystem-i1" class="starPointSystem">
+                                <div class="text-danger" th:errors="${spotRegisterationForm.starPoint}">별점 시스템 오류</div>
                                 <input
-                                	th:name="starPoint"
+                                    th:name="starPoint"
                                     class="input-star-point"
                                     type="text"
                                     value="10"
@@ -131,10 +135,10 @@
         <!--fontawesome-->
         <script src="../../library/fontawesome/all.js"></script>
         <!--부트 스트랩-->
-        <script src="../../bootStrap/bootstrap.min.js"></script>
+        <script src="../../static/bootStrap/bootstrap.min.js"></script>
         <!--cummon.js-->
-        <script src="../../common.js"></script>
-        <!--myjs-->
-        <script src="../../js/spotRegisteration.js"></script>
+        <script src="../../static/common.js"></script>
+        <!--specific-->
+        <script src="../../static/js/spotRegisteration.js"></script>
     </body>
 </html>
