--- a/ourShef/src/main/resources/static/css/spot.css
+++ b/ourShef/src/main/resources/static/css/spot.css
@@ -41,6 +41,13 @@
   width: 60px;
   float: left
 }
+
+.img-commet-profile {
+	width: 50px; 
+	max-height: 50px;
+	margin-bottom: 3px;
+}
+
 .comment-middle .text-frame {
   width: 270px;
   padding: 5px;
@@ -90,6 +97,7 @@ textarea {
 .btn-leave-comment2
 {
   margin-top: 3px;
+  margin-bottom: 30px;
   font-size: 16px;
   width: 100px;
   height: 25px;
