--- a/ourShef/src/main/resources/templates/login/joinForm.html
+++ b/ourShef/src/main/resources/templates/login/joinForm.html
@@ -6,11 +6,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!--부트 스트랩-->
-<link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-<link rel="stylesheet" href="../../bootStrap/bootstrap.css">
+<link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
+<link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
 
 <!--custom-->
-<link rel="stylesheet" href="../../style.css">
+<link rel="stylesheet" href="../../static/common.css">
+<link rel="stylesheet" href="../../static/css/joinForm.css">
 
 <title>회원가입</title>
 </head>
@@ -92,10 +93,10 @@
 		</div>
 	</form>
 	<!--부트 스트랩-->
-	<script src="../js/bootstrap.js"></script>
+	<script src="../../static/bootStrap/bootstrap.min.js"></script>
 	<!--common.js-->
-	<script src="../../common.js"></script>
+	<script src="../../static/common.js"></script>
 	<!-- specific -->
-	<script src="/js/joinForm.js"></script>
+	<script src="../../static/js/joinForm.js"></script>
 </body>
 </html>
