--- a/ourShef/src/main/resources/templates/login/loginHome.html
+++ b/ourShef/src/main/resources/templates/login/loginHome.html
@@ -6,36 +6,37 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--fontawesome-->
-        <link rel="stylesheet" href="../../static/library/fontawesome/all.min.css">
+        <link rel="stylesheet" th:href="@{/library/fontawesome/all.min.css}" href="../../static/library/fontawesome/all.min.css">
         <!--부트 스트랩-->
         <link
             rel="stylesheet"
             href="../../static/bootStrap/bootstrap-theme.css"
-            th:href="../../bootStrap/bootstrap-theme.css">
+            th:href="@{/bootStrap/bootstrap-theme.css}">
         <link
             rel="stylesheet"
             href="../../static/bootStrap/bootstrap.css"
-            th:href="../../bootStrap/bootstrap.css">
+            th:href="@{/bootStrap/bootstrap.css}">
 
         <!-- slick slider-->
         <link
             rel="stylesheet"
             href="../../static/library/slick/slick-theme.css"
-            th:href="../../library/slick/slick-theme.css">
+            th:href="@{library/slick/slick-theme.css}">
         <link
             rel="stylesheet"
             href="../../static/library/slick/slick.css"
-            th:href="../../library/slick/slick.css">
+            th:href="@{library/slick/slick.css}">
 
         <!--css-->
-        <link rel="stylesheet" href="../../static/common.css" th:href="../../style.css">
+        <link rel="stylesheet" href="../../static/common.css" th:href="@{/common.css}">
+        <link rel="stylesheet" th:href="@{/css/loginHome.css}">
 
-        <title>Document</title>
+        <title>loginHome</title>
     </head>
-    <body class="loginHome">
+    <body>
         <div class="container text-center">
             <div class="row">
-                <h1 style="color: gray;">로그인 홈</h1>
+                <h1 class="text-primary">로그인 홈</h1>
             </div>
             <div class="row">
                 <h3 style="margin-bottom: 20px; color: gray;">최근에 업데이트 된 우리들의 맛집정보!</h3>
@@ -53,7 +54,7 @@
                                 </div>
                                 <div th:text="${recentAcquaintanceSpotDto.acquaintance.nickName}">홍길동</div>
                                 <div class="reliabilitySystem">
-                                    <input class="input-reliability-size" type="hidden" value="-1">
+                                    <input class="input-reliability-size" type="hidden" th:value="${recentAcquaintanceSpotDto.acquaintance.reliability}" value="-1">
                                     <div class="reliabilityText">신뢰도</div>
                                     <div class="gaugeBar">
                                         <div class="back"></div>
@@ -91,9 +92,9 @@
                                     </div>
                                     <div>
                                         <div th:if="${recentAcquaintanceSpotDto.recentSpot.usersStarPoint} == -1">
-                                            방문 유저 없음</div>
+                                            방문 지인 없음</div>
                                         <div th:if="${recentAcquaintanceSpotDto.recentSpot.usersStarPoint} != -1">
-                                            <div>유저들 평점</div>
+                                            <div>지인들 평점</div>
                                             <div class="starPointSystem">
                                                 <input
                                                     th:value="${recentAcquaintanceSpotDto.recentSpot.usersStarPoint}"
@@ -119,6 +120,7 @@
                                                     </div>
                                                 </div>
                                             </div>
+                                            <div th:text="'방문 ' + ${recentAcquaintanceSpotDto.recentSpot.visits}">방문수</div>
                                         </div>
                                     </div>
                                 </div>
@@ -126,7 +128,7 @@
                             <div class="spot-info-right">
                                 <div>
                                     <div>
-                                        <a href="#none">
+                                        <a th:href="@{/spot/spot/{spotId}(spotId =${recentAcquaintanceSpotDto.recentSpot.id})}" href="#none">
                                             <img
                                                 th:src="@{/img/spotMain/{storeName}(storeName =${recentAcquaintanceSpotDto.recentSpot.mainImgStoreName})}"
                                                 th:class="img-rounded"
@@ -143,7 +145,7 @@
                                 </div>
                             </div>
                             <div class="spot-info-bottom">
-                                <div>
+                                <div th:text="${recentAcquaintanceSpotDto.recentSpot.spotIntroduction}">
                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda non animi
                                     similique minus possimus? Repellat necessitatibus a dicta provident porro
                                     tempore quod omnis ex rem. Recusandae nesciunt quos illum quia voluptatibus, ea
@@ -178,7 +180,7 @@
                     <div class="pager-navigator">1/10</div>
                 </div>
             </div>
-            <div calss="row">
+            <div class="row">
                 <div class="my-recent-spot">
                     <div class="head-text">
                         최근 업데이트 된 나의 맛집
@@ -187,13 +189,13 @@
                         <div class="spot-info-left">
                             <div class="img">
                                 <img
-                                    th:src="@{/img/userProfile/{storeName}(storeName= ${recentAcquaintanceSpotDto.acquaintance.profileImgStoreName})}"
+                                    th:src="@{/img/loginUserProfile}"
                                     th:class="img-circle"
                                     class="img-circle demo-img">
                             </div>
-                            <div th:text="${recentAcquaintanceSpotDto.acquaintance.nickName}">홍길동</div>
+                            <div th:text="${loginUserDto.nickName}">홍길동</div>
                             <div class="reliabilitySystem">
-                                <input class="input-reliability-size" type="hidden" value="-1">
+                                <input class="input-reliability-size" type="hidden" th:value="${loginUserDto.reliability}" value="-1">
                                 <div class="reliabilityText">신뢰도</div>
                                 <div class="gaugeBar">
                                     <div class="back"></div>
@@ -205,7 +207,7 @@
                                     <div>등록자 평점</div>
                                     <div class="starPointSystem">
                                         <input
-                                            th:value="${recentAcquaintanceSpotDto.recentSpot.registrantStarPoint}"
+                                            th:value="${loginUserRecentSpotDto.registrantStarPoint}"
                                             th:name="starPoint"
                                             class="input-star-point"
                                             type="text"
@@ -230,13 +232,13 @@
                                     </div>
                                 </div>
                                 <div>
-                                    <div th:if="${recentAcquaintanceSpotDto.recentSpot.usersStarPoint} == -1">
+                                    <div th:if="${loginUserRecentSpotDto.usersStarPoint} == -1">
                                         방문 유저 없음</div>
-                                    <div th:if="${recentAcquaintanceSpotDto.recentSpot.usersStarPoint} != -1">
+                                    <div th:if="${loginUserRecentSpotDto.usersStarPoint} != -1">
                                         <div>유저들 평점</div>
                                         <div class="starPointSystem">
                                             <input
-                                                th:value="${recentAcquaintanceSpotDto.recentSpot.usersStarPoint}"
+                                                th:value="${loginUserRecentSpotDto.usersStarPoint}"
                                                 th:name="starPoint"
                                                 class="input-star-point"
                                                 type="text"
@@ -259,6 +261,7 @@
                                                 </div>
                                             </div>
                                         </div>
+                                        <div th:text="'방문 ' + ${loginUserRecentSpotDto.visits}">방문수</div>
                                     </div>
                                 </div>
                             </div>
@@ -268,7 +271,7 @@
                                 <div>
                                     <a href="#none">
                                         <img
-                                            th:src="@{/img/spotMain/{storeName}(storeName =${recentAcquaintanceSpotDto.recentSpot.mainImgStoreName})}"
+                                            th:src="@{/img/loginUserRecentRegisterationSpot}"
                                             th:class="img-rounded"
                                             class="img-rounded demo-img">
                                     </a>
@@ -276,14 +279,14 @@
                             </div>
                             <div
                                 class="spot-name"
-                                th:text="${recentAcquaintanceSpotDto.recentSpot.spotName}">식당 이름</div>
+                                th:text="${loginUserRecentSpotDto.spotName}">식당 이름</div>
                             <div>
                                 <div
-                                    th:text="${#temporals.format(recentAcquaintanceSpotDto.recentSpot.registeredTime, 'yyyy-MM-dd')}">0000-00-00</div>
+                                    th:text="${#temporals.format(loginUserRecentSpotDto.registeredTime, 'yyyy-MM-dd')}">0000-00-00</div>
                             </div>
                         </div>
                         <div class="spot-info-bottom">
-                            <div>
+                            <div th:text="${loginUserRecentSpotDto.spotIntroduction}">
                                 Lorem ipsum dolor sit amet consectetur adipisicing elit. Assumenda non animi
                                 similique minus possimus? Repellat necessitatibus a dicta provident porro
                                 tempore quod omnis ex rem. Recusandae nesciunt quos illum quia voluptatibus, ea
@@ -311,20 +314,20 @@
                     </div>
                 </div>
             </div>
-            <!--jQuery-->
+        </div>
+         	<!--jQuery-->
             <script
                 src="../../static/library/jquery-2.1.4.js"
-                th:src="../../library/jquery-2.1.4.js"></script>
+                th:src="@{/library/jquery-2.1.4.js}"></script>
             <!--cummon.js-->
-            <script src="../../static/common.js" th:src="../../common.js"></script>
+            <script src="../../static/common.js" th:src="@{/common.js}"></script>
             <!--slik slider-->
             <script
                 src="../../static/library/slick/slick.js"
-                th:src="../../library/slick/slick.js"></script>
+                th:src="@{/library/slick/slick.js}"></script>
             <!--custom.js-->
-            <script src="../../static/js/loginHome.js" th:src="../../js/loginHome.js"></script>
+            <script th:src="@{/js/loginHome.js}" src="../../static/js/loginHome.js"></script>
             <!--fontawesome-->
-            <script src="../../static/library/fontawesome/all.js"></script>
-        </div>
+            <script th:src="@{/library/fontawesome/all.js}" src="../../static/library/fontawesome/all.js"></script>
     </body>
 </html>
