--- a/ourShef/src/main/resources/templates/spot/spotListOfUser.html
+++ b/ourShef/src/main/resources/templates/spot/spotListOfUser.html
@@ -6,14 +6,18 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!--jQuery-->
-        <script src="/library/jquery-2.1.4.js"></script>
+        <script src="../../static/library/jquery-2.1.4.js"></script>
 
         <!--부트 스트랩-->
-        <link rel="stylesheet" href="../../bootStrap/bootstrap-theme.css">
-        <link rel="stylesheet" href="../../bootStrap/bootstrap.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap-theme.css">
+        <link rel="stylesheet" href="../../static/bootStrap/bootstrap.css">
+
+        <!-- fonsawesome -->
+        <link rel="stylesheet" href="../../static/library/fontawesome/all.min.css">
 
         <!--custom-->
-        <link rel="stylesheet" href="../../style.css">
+        <link rel="stylesheet" href="../../static/common.css">
+        <link rel="stylesheet" href="../../static/css/spotListOfUser.css">
 
         <title>spotListOfUser</title>
     </head>
@@ -30,6 +34,19 @@
                             <img class="demo-img">
                         </div>
                         <div>
+                            닉네임닉네임닉네임
+                        </div>
+                        <div>
+                            <div class="reliabilitySystem">
+                                <input class="input-reliability-size" type="hidden" value="-1">
+                                <div class="reliabilityText">신뢰도</div>
+                                <div class="gaugeBar">
+                                    <div class="back"></div>
+                                    <div class="front"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div>
                             Lorem, ipsum dolor sit amet consectetur adipisicing elit. Commodi consequuntur,
                             rerum atque nemo nostrum ducimus provident expedita quaerat consequatur,
                             doloremque quae aliquam modi nam nisi veniam possimus pariatur, soluta
@@ -39,40 +56,59 @@
                 </div>
                 <div class="col-sm-1"></div>
                 <div class="col-sm-6 spot-area">
-                    <div class="spot-info">
-                        <div><img class="demo-img" alt="장소 사진"></div>
-                        <div>장소 이름</div>
-                        <div>장소 별점</div>
-                        <div>
-                            짧은 설명 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem
-                            atque, consequuntur provident dolorum ad
+                    <div class="spots-wrapper">
+                        <div class="spot-info">
+                            <div><img class="demo-img" alt="장소 사진"></div>
+                            <div>장소 이름</div>
+                            <div class="users-star-point-frame">
+                                <div>총점</div>
+                                <div class="starPointSystem">
+                                    <input class="input-star-point" type="text" value="10" required="required">
+                                    <div class="star-point-area">
+                                        <div class="star-front"></div>
+                                        <div class="star-back"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="registrant-star-point-frame">
+                                <div>등록자 평점</div>
+                                <div class="starPointSystem">
+                                    <input class="input-star-point" type="text" value="10" required="required">
+                                    <div class="star-point-area">
+                                        <div class="star-front"></div>
+                                        <div class="star-back"></div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div>
+                                짧은 설명 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem
+                                atque, consequuntur provident dolorum ad
+                            </div>
                         </div>
                     </div>
-                    <div class="spot-info">
-                        <div><img class="demo-img" alt="장소 사진"></div>
-                        <div>장소 이름</div>
-                        <div>장소 별점</div>
-                        <div>
-                            짧은 설명 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem
-                            atque, consequuntur provident dolorum ad
-                        </div>
-                    </div>
-                    <div class="spot-info">
-                        <div><img class="demo-img" alt="장소 사진"></div>
-                        <div>장소 이름</div>
-                        <div>장소 별점</div>
-                        <div>
-                            짧은 설명 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem
-                            atque, consequuntur provident dolorum ad
-                        </div>
-                    </div>
-                    <div class="spot-info">
-                        <div><img class="demo-img" alt="장소 사진"></div>
-                        <div>장소 이름</div>
-                        <div>장소 별점</div>
-                        <div>
-                            짧은 설명 Lorem ipsum, dolor sit amet consectetur adipisicing elit. Exercitationem
-                            atque, consequuntur provident dolorum ad
+                    
+                    <div class="pager-container-wrapper">
+                        <div class="pager-container">
+                            <div class="pager-arrow">
+                                <a>
+                                    <i class="fas fa-chevron-left"></i>
+                                </a>
+                            </div>
+                            <div class="page-container">
+                                <div class="page-list">
+                                    <a class="page-num current-page-num">1</a>
+                                    <a class="page-num">2</a>
+                                    <a class="page-num">3</a>
+                                    <a class="page-num">4</a>
+                                    <a class="page-num">5</a>
+                                </div>
+                            </div>
+                            <div class="pager-arrow">
+                                <a>
+                                    <i class="fas fa-chevron-right"></i>
+                                </a>
+                            </div>
+                            <div class="pager-navigator">1/10</div>
                         </div>
                     </div>
                 </div>
@@ -90,8 +126,10 @@
           </div>
         </div>
         <!--부트 스트랩-->
-        <script src="../../bootStrap/bootstrap.min.js"></script>
+        <script src="../../static/bootStrap/bootstrap.min.js"></script>
+        <!-- fonsawesome -->
+        <script src="../../static/library/fontawesome/all.js"></script>
         <!--custom.js-->
-        <script src="../../common.js"></script>
+        <script src="../../static/common.js"></script>
     </body>
 </html>
